DC-67: minor changes